[package]
name = "crpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
discord-rich-presence = "0.1.8"
serde_json = "1.0.71"
serde = {version = "1.0.130", features = ["derive"]}
